# stripe-interview

./: main.py  pyproject.toml  test.py
stripe_interview/: closing_time.py  fibanocci.py  find_best_closing_time.py  find_best_closing_times.py
tests/: test_closing_time.py  test_fibanocci.py  test_find_best_closing_time.py  test_find_best_closing_times.py
