[tool.poetry]
name = "stripe-interview"
version = "0.1.0"
description = ""
authors = ["Ying Wang <yingw787.personal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipdb = "^0.13.13"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
